--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^9.0.0
   bloc: ^9.0.0
   firebase_auth: ^5.4.2
+  cloud_firestore: ^5.6.4
   go_router: ^14.8.0
   google_sign_in: ^6.2.2
 
