--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^5.6.4
   go_router: ^14.8.0
   google_sign_in: ^6.2.2
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
