--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   go_router: ^14.8.0
   google_sign_in: ^6.2.2
   carousel_slider: ^5.0.0
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
