--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_sign_in: ^6.2.2
   carousel_slider: ^5.0.0
   shared_preferences: ^2.5.2
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
