--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   dio: ^5.8.0+1
   dartz: ^0.10.1
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
