--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,8 @@ dependencies:
   device_preview: ^1.2.0
   google_maps_flutter: ^2.10.1
   location: ^8.0.0
-  geocoding: ^3.0.0
+  flutter_native_splash: ^2.4.5
+  flutter_dotenv: ^5.2.1
 
 
 dev_dependencies:
@@ -79,6 +80,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/
+     - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
