--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_native_splash: ^2.4.5
   flutter_dotenv: ^5.2.1
   cached_network_image: ^3.4.1
+  provider: ^6.1.4
 
 
 dev_dependencies:
