--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   cached_network_image: ^3.4.1
   provider: ^6.1.4
+  geocoding: ^2.0.5
 
 
 dev_dependencies:
