refactor homeview appbar

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,6 @@ dependencies:
   go_router: ^14.8.0
   google_sign_in: ^6.2.2
   carousel_slider: ^5.0.0
-  shared_preferences: ^2.5.2
   font_awesome_flutter: ^10.8.0
   dio: ^5.8.0+1
   dartz: ^0.10.1
@@ -56,6 +55,7 @@ dependencies:
   cached_network_image: ^3.4.1
   provider: ^6.1.4
   geocoding: ^2.0.5
+  uuid: ^4.5.1
 
 
 dev_dependencies:
