--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   provider: ^6.1.4
   geocoding: ^2.0.5
   uuid: ^4.5.1
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.19.0
 
 
 dev_dependencies:
@@ -110,3 +113,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_intl:
+  enabled: true
